[package]
name = "nmstatectl"
version = "2.2.28"
authors = ["Gris Ge <fge@redhat.com>"]
description = "Command line tool for networking management in a declarative manner"
license = "Apache-2.0"
homepage = "https://nmstate.io"
documentation = "https://nmstate.io"
repository = "https://github.com/nmstate/nmstate"
keywords = ["network", "linux"]
categories = ["network-programming", "os::linux"]
edition = "2021"
rust-version = "1.58"

[[bin]]
name = "nmstatectl"
path = "ncl.rs"

[dependencies]
nmstate = { workspace = true }
serde_yaml = { workspace = true }
clap = { version = "3.1", features = ["cargo"] }
serde = { workspace = true }
env_logger = "0.10.0"
log = { workspace = true }
serde_json = { workspace = true }
ctrlc = { version = "3.2.1", optional = true }
uuid = { workspace = true }
chrono = "0.4"
nispor = { workspace = true, optional = true }
toml = "0.8.10"

[features]
default = ["query_apply", "gen_conf", "gen_revert"]
query_apply = ["nmstate/query_apply", "ctrlc", "nispor"]
gen_conf = ["nmstate/gen_conf"]
gen_revert = ["nmstate/gen_revert"]
